--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ nav {
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 3rem;
-  padding-top: 4rem;
+  padding-top: 7rem;
 }
 
 .profile-content {
@@ -120,8 +120,8 @@ nav {
 }
 
 .profile-img-wrapper {
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   overflow: hidden;
   border: 8px solid var(--primary-light);
@@ -137,12 +137,12 @@ nav {
 }
 
 .profile-img-wrapper:hover .profile-photo {
-  transform: scale(1.05);
+  transform: scale(1.00);
 }
 
 h1 {
   font-size: 3.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2 rem;
   color: var(--dark);
   line-height: 1.2;
 }
@@ -564,9 +564,9 @@ h1 {
       <div class="contact-info">
         <a href="mailto:varshinipillala14@gmail.com"><i class="fas fa-envelope"></i> varshinipillala14@gmail.com</a>
         <a href="tel:+919398873343"><i class="fas fa-phone"></i> +91 9398873343</a>
-        <a href="#" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        <a href="#" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        <a href="#" target="_blank"><i class="fas fa-code"></i> LeetCode</a>
+        <a href="https://www.linkedin.com/in/varshini-pillala/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        <a href="https://github.com/VarshiniPillala" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+        <a href="https://leetcode.com/u/VarshiniPillala/" target="_blank"><i class="fas fa-code"></i> LeetCode</a>
       </div>
     </div>
     
@@ -697,7 +697,7 @@ h1 {
             <li>Built custom ranking algorithm</li>
             <li>Reduced HR screening time by 70%</li>
           </ul>
-          <a href="https://github.com/varshinipillala/resume-screening-system" class="github-link" target="_blank">
+          <a href="https://github.com/VarshiniPillala/ai-powered-resume-screening-and-ranking-system" class="github-link" target="_blank">
             <i class="fab fa-github"></i> View on GitHub
           </a>
         </div>
@@ -719,7 +719,7 @@ h1 {
             <li>Real-time notifications</li>
             <li>PDF submission handling</li>
           </ul>
-          <a href="https://github.com/varshinipillala/educational-task-manager" class="github-link" target="_blank">
+          <a href="https://github.com/VarshiniPillala/Educational-Task-Management" class="github-link" target="_blank">
             <i class="fab fa-github"></i> View on GitHub
           </a>
         </div>
